syntax = "proto3";

package pt.tecnico.addressbook.grpc;

option java_multiple_files = true;
option java_package = "pt.tecnico.addressbook.grpc";
option java_outer_classname = "AddressBookProtobuf";

enum PhoneType {
  MOBILE = 0;
  HOME = 1;
  WORK = 2;
}

message PhoneNumber {
  int32 number = 1;
  PhoneType type = 2;
}

message PersonInfo {
  string name = 1;
  string birthday = 2;
  string email = 3;

  PhoneNumber phone = 4;
}

message AddressBookList {
  repeated PersonInfo people = 1;
}

message ListPeopleRequest {

}

message SearchPersonRequest {
  string email = 1;
}

message AddPersonResponse {
}

message UpdateRequest {
  string email = 1;
  PhoneNumber phone = 2;
}

message UpdateResponse {

}

message ListAllRequest {
  string birthday = 1;
}

message ListAllResponse {
  repeated PhoneNumber phoneNumber = 1;
}

service AddressBookService {
  rpc listPeople(ListPeopleRequest) returns(AddressBookList);
  rpc addPerson(PersonInfo) returns (AddPersonResponse);
  rpc searchPerson(SearchPersonRequest) returns (PersonInfo);
  rpc update(UpdateRequest) returns (UpdateResponse);
  rpc listAll(ListAllRequest) returns (ListAllResponse);
}